Relacionamento de usuario com teorias, get me, update me, delete me.

--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ DATABASE=mongodb+srv://nicholas:<PASSWORD>@cluster0.j1j0t.mongodb.net/natours?re
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=gYhTs55CwM9Htn4E
 
-JWT_SECRET=rei-de-westeros-dos-andalos-e-dos-roinares
+JWT_SECRET=jod18cnp%40ap49024!4jz)584&@$$gs
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90d
 
